<resources>
    <string name="app_name">DailyReport</string>

    <!-- footer -->
    <string name="footer_item1">My report</string>
    <string name="footer_item2">Others</string>
    <string name="footer_item3">AP</string>
    <string name="footer_item4">Setting</string>

    <string name="dr_at_time">&#160;%1$s</string>

    <string name="fragment_report_edit_change_template_confirm">Are you sure to change report template?</string>
    <string name="fragment_other_title">Others</string>
    <string name="fragment_follower_title_checker">Checked user list</string>
    <string name="fragment_follower_title_liker">Liked user list</string>
    <string name="dr_report_comment_title">Comment</string>
    <string name="spinner_name_template">Template</string>
    <string name="spinner_name_dept">Dept</string>
    <string name="spinner_name_user">User</string>
    <string name="fragment_setting_title">Setting</string>
    <string name="fragment_title_empty"></string>
    <string name="header_calendar_this_month">This month</string>
    <string name="fragment_common_list_empty">Sorry, there is no data</string>
    <string name="fragment_activities_title">Activity list</string>
    <string name="fragment_about_version">Version %1$s</string>
    <string name="str_all">All</string>
    <string name="str_none">None</string>

    <string name="dr_preview_title">Preview</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>

    <string name="dlr_report_content">Report Content</string>
    <string name="dlr_add_comment">Add Comment</string>
    <string name="dlr_like">Like</string>

    <string name="dlr_send">Send</string>
    <string name="dlr_save">Save</string>
    <string name="dlr_plan">Plan</string>
    <string name="dlr_actual">Actual</string>
    <string name="dlr_content">Content</string>

    <string name="dlr_add_kpi">Add</string>
    <string name="dlr_unit">Unit</string>

    <string name="dlr_saturday">Sat</string>
    <string name="dlr_sunday">Sun</string>
    <string name="dlr_monday">Mon</string>
    <string name="dlr_tue">Tue</string>
    <string name="dlr_wed">Wed</string>
    <string name="dlr_thu">Thu</string>
    <string name="dlr_fri">Fri</string>

    <string name="view_kpi_monthly_goal">Monthly goal</string>
    <string name="view_kpi_actual_plan">Action plan</string>
    <string name="dlr_copy">Copy</string>
    <string name="dlr_item">Item</string>
    <string name="dlr_goal">Goal</string>
    <string name="dlr_sum">Sum</string>
    <string name="dlr_avg">Avg</string>
    <string name="dlr_monthly_goal">Monthly goal</string>
    <string name="dlr_input_rule">Input rule</string>
    <string name="dlr_clear">Clear</string>
    <string name="dlr_done">Done</string>
    <string name="dlr_delete">Delete</string>
    <string name="dlr_archievement">Achievement</string>

    <string name="dr_report_kpi_item_required">You have to make KPI item.</string>

    <string name="dr_comment_edittext_hint">Just write down something</string>
    <string name="spinner_name_report_user">Report User</string>
    <string name="spinner_name_action_user">Action User</string>

    <string name="dr_activity_item_desc">Target report: %1$s report by %2$s</string>
    <string name="dlg_monthly_goal_title">Actual entry with monthly goal</string>
    <string name="dlg_add_actual_plan_title">Actual entry with action plan</string>
    <string name="dr_item_name">Item name</string>
    <string name="dlr_monthly_goal_achievement">Monthly goal achievement</string>
    <string name="dlr_now">Now</string>
    <string name="dlr_max_entries">Max is 10</string>
    <string name="dlr_action_plan">Action plan</string>
    <string name="dr_action_name">Action name</string>
    <string name="dlr_action_actual">Action actual</string>

    <string name="dlr_monthly_goal_title">KPI (Monthly Goal)</string>
    <string name="spn_goal_title">Goal</string>
    <string name="kpi_empty">KPI Goals is empty \n Contact your Admin, please !</string>
    <string name="kpi_graph_byuser">Graph by User</string>
    <string name="kpi_graph_bymonth">Graph by Month</string>
    <string name="dr_item">Item</string>
    <string name="msg_msg_invalid_empty">Comment is not between 1 and 1,000</string>
    <string name="msg_msg_report_content_null">Content: is not between 3 and 10000</string>
    <string name="msg_msg_report_custome_null">%1$s : length is between 3 and 10000</string>

    <!--Notifications-->
    <string name="FM_DR_001">%1$s made new daily report</string>
    <string name="FM_DR_002">%1$s like your report</string>
    <string name="FM_DR_003">%1$s comment on your report</string>
    <string name="header_calendar_this_week">This week</string>
    <string name="goal_period">Goal period</string>
    <string name="personal_goal">Personal goal</string>
    <string name="total_performance">Total actual results</string>
    <string name="achievement_rate">Achievement rate</string>
    <string name="today_performance">Today\'s actual result</string>
    <string name="footer_itemkpi">KPI</string>
    <string name="fragment_kpi_title">Actual result input</string>
    <string name="fragment_actual_plan_title">Personal action plan</string>
    <string name="fragment_group_actual_title">Group’s performance</string>
    <string name="fragment_group_actual_list_title">GroupActualList</string>
    <string name="fragment_group_actual_list">Group List</string>
    <string name="group_actual_list_goal">Group goal list</string>
    <string name="fragment_group_actual_group_goal">Group goal</string>
    <string name="fragmen_group_actual_needed_amount">Amount you need to reach the goal</string>
    <string name="achieve_dialog_title">Achieved!</string>
    <string name="achieve_dialog_content">Congratulations!!\\nYou have achieved your personal goal.\\nWonderfull!!\\nContinue the good work!</string>
    <string name="achieve_warning_dialog_title">Today is checkpoint day</string>
    <string name="achieve_warning_dialog_content">You have not achieved KPI.\\nPlease rethink your action plans.</string>
    <string name="user_has_no_action_plan_setup">No action plan set up</string>
    <string name="today_goal">Today\'s goal</string>
    <string name="supplement_memo">Supplement memo</string>
    <string name="performance_in_month">Performance in %1$s</string>
    <string name="achievement_rate_in_month">Achievement rate in %1$s</string>
    <string name="user_has_no_kpi_setup">Your KPI is not set</string>
    <string name="fragment_kpi_title_tassei">Personal achievement</string>
    <string name="fragment_kpi_title_jisseki">Personal performance</string>
    <string name="overall_performance">Overall performance</string>
</resources>
