<?xml version="1.0" encoding="utf-8"?>
<trente.asia.dailyreport.services.kpi.view.KpiCalendarView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_txt_calendar_header_date"
        android:text="2016/12"
        android:layout_alignParentTop="true"
        style="@style/dr_date_header" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_txt_calendar_header_date"
        android:background="@color/cs_common_selectable_color"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_5dp"
        android:paddingTop="@dimen/margin_10dp"
        android:weightSum="7">

        <TextView
            style="@style/wl_common_text"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1dp"
            android:text="@string/dlr_sunday" />

        <TextView
            style="@style/wl_common_text"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1dp"
            android:text="@string/dlr_monday" />

        <TextView
            style="@style/wl_common_text"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1dp"
            android:text="@string/dlr_tue" />

        <TextView
            style="@style/wl_common_text"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1dp"
            android:text="@string/dlr_wed" />

        <TextView
            style="@style/wl_common_text"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1dp"
            android:text="@string/dlr_thu" />

        <TextView
            style="@style/wl_common_text"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1dp"
            android:text="@string/dlr_fri" />

        <TextView
            style="@style/wl_common_text"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1dp"
            android:text="@string/dlr_saturday" />

    </LinearLayout>


    <trente.asia.welfare.adr.view.WfGridView
        android:id="@+id/view_dr_calendar_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_gravity="center_horizontal"
        android:background="@color/core_gray"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:stretchMode="columnWidth" />

    <View
        style="@style/dr_common_divider"
        android:layout_below="@+id/view_dr_calendar_gridview" />


</trente.asia.dailyreport.services.kpi.view.KpiCalendarView>