<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_16dp"
    android:layout_marginRight="@dimen/margin_16dp"
    android:background="@drawable/dr_background_gray_border_padding"

    android:orientation="vertical"
    android:padding="@dimen/margin_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal_period" />

        <TextView
            android:id="@+id/group_actual_info_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_group_actual_group_goal" />

        <TextView
            android:id="@+id/group_actual_info_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_performance" />

        <TextView
            android:id="@+id/group_actual_info_actual_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/achievement_rate" />

        <TextView
            android:id="@+id/group_actual_info_achievement_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragmen_group_actual_needed_amount" />

        <TextView
            android:id="@+id/group_actual_info_to_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value" />

    </LinearLayout>
</LinearLayout>

