<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/cs_common_match"
              android:background="@color/cs_work_background"
              android:orientation="vertical">

    <include layout="@layout/view_common_header"/>

    <RelativeLayout
        style="@style/cs_common_match"
        android:layout_weight="1"
        android:padding="@dimen/wf_margin_16">

        <RelativeLayout
            android:id="@+id/lnr_kpi_graph"
            style="@style/cs_common_match_wrap"
            android:visibility="gone">

            <include
                android:id="@+id/spn_kpi_goal"
                layout="@layout/view_wf_spinner"/>

            <TextView
                android:id="@+id/txt_graph_by_user"
                style="@style/cs_common_wrap"
                android:layout_below="@+id/spn_kpi_goal"
                android:layout_marginTop="@dimen/wf_margin_16"
                android:drawableTop="@drawable/btn_gr_kpi_active"
                android:textAllCaps="true"
                android:text="@string/kpi_graph_byuser"/>

            <TextView
                android:id="@+id/txt_graph_by_month"
                style="@style/cs_common_wrap"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/spn_kpi_goal"
                android:layout_marginTop="@dimen/wf_margin_16"
                android:textAllCaps="true"
                android:drawableTop="@drawable/btn_gr_kpi_active"
                android:text="@string/kpi_graph_bymonth"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_none_kpi_graph"
            style="@style/cs_common_match_wrap"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/kpi_empty"
            android:textColor="@color/chiase_red"
            android:textSize="@dimen/margin_24dp"
            android:visibility="gone"/>

    </RelativeLayout>

    <include layout="@layout/view_common_footer"/>

</LinearLayout>
